--- a/Subreddit Title Investigation.ipynb
+++ b/Subreddit Title Investigation.ipynb
@@ -23,12 +23,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reddit = praw.Reddit(client_id = 'QPLNKgwv94Zx2A',\n",
-    "                     client_secret = 'aqwyGK3EAWC9-IeSN7tR6GhNZCc',\n",
-    "                     password ='bulldogs11',\n",
-    "                     user_agent = 'chromium:CommentPuller:v0.1 (by -jaylew-)',\n",
-    "                     username ='-jaylew-',\n",
-    "                     ) ##initialize a reddit instance, log in using my info"
+    "reddit = praw.Reddit(client_id = 'insert client id here',\n",
+    "                     client_secret = 'insert secret here',\n",
+    "                     password ='insert password here',\n",
+    "                     user_agent = 'chromium:CommentPuller:v0.1 (by ...)',\n",
+    "                     username ='username here',\n",
+    "                     ) ##initialize a reddit instance, log in using info"
    ]
   },
   {
@@ -40,7 +40,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-jaylew-\n"
+      "\n"
      ]
     }
    ],
